--- a/package.json
+++ b/package.json
@@ -8,17 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "mitt": "^3.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.0.3",
+    "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@volar-plugins/vetur": "latest",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "css-loader": "^6.7.2",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "react-app-rewired": "^2.2.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1"
   },
   "eslintConfig": {
     "root": true,
@@ -32,7 +46,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
