--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "pinia": "^2.0.30",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
