--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.7.4",
+    "@vee-validate/rules": "^4.7.4",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.3",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pinia": "^2.0.30",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
     "vue3-loading-overlay": "^0.0.0"
   },
