--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.3",
     "core-js": "^3.8.3",
+    "gsap": "^3.11.4",
     "mitt": "^3.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pinia": "^2.0.30",
