--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mitt": "^3.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pinia": "^2.0.30",
+    "swiper": "^9.1.0",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
